--- a/量化面试题目/投递汇总.md
+++ b/量化面试题目/投递汇总.md
@@ -14,7 +14,7 @@
 | 5/18/24 | 海南盛丰                  | 12:00 -- 16:00             | 星化研究实习生 400-600元/天 北京 | 概率论、线性代数、微积分、简单的Python编程题和算法。                                                                                                                                                   |
 | 5/19/24 | 通登基金                  | 19:00 -- 20:30             | 见pdf                                      | 未定                                                                                                                                                   |
 | 5/23/24 | 量派基金                  | 14:00 -- 17:00             | 见pdf                                      | 未定                                                                                                                                                   |
-| 5/15/24 | 金讯扬行                  | 三天内             | 量化研究员 200-400元/天 北京                                      | 未定                                                                                                                                                   |
+| 5/15/24 | 金讯扬行                  | 已完成             | 量化研究员 200-400元/天 北京                                      | 未定                                                                                                                                                   |
 | ~       | 信弘天禾                  | ~                          | ~                                         | ~                                                                                                                                                      |
 
 
