--- a/internship/高频因子/highfrevol_intro.ipynb
+++ b/internship/高频因子/highfrevol_intro.ipynb
@@ -19,7 +19,7 @@
    "id": "7e735bf2-8719-4ab7-8abd-0f69ee1d7922",
    "metadata": {},
    "source": [
-    "名称: extreme_nervous_RC          \n",
+    "名称: high_fre_vol_RC,high_fre_diff_vol_RC,high_fre_absdiff_vol_RC,peak_count_vol_RC             \n",
     "来源: 基础因子研究（十四）：高频因子（九），高频波动中的时间序列信息-20201012-长江证券-22页           \n",
     "作者: RC           \n",
     "构造方法:                  \n",
